<resources>
    <string name="app_name">Banks</string>
    <string name="title_branches">Branches</string>
    <string name="title_branch">Branch</string>
    <string name="title_atms">ATMs</string>
    <string name="title_atm">ATM</string>
    <string name="title_map">Map</string>
    <string name="title_activity_branch">BranchActivity</string>
    <string name="branch_images">Branch images</string>
    <string name="branch_openingHoursTitle">Opening hours:</string>
    <string name="branch_opening_mondayTitle">Monday</string>
    <string name="branch_opening_tuesdayTitle">Tuesday</string>
    <string name="branch_opening_wednesdayTitle">Wednesday</string>
    <string name="branch_opening_thursdayTitle">Thursday</string>
    <string name="branch_opening_fridayTitle">Friday</string>
    <string name="branch_opening_saturdayTitle">Saturday</string>
    <string name="branch_opening_sundayTitle">Sunday</string>
    <string name="branch_closedTitle">Closed</string>
    <string name="branch_nonstopTitle">Nonstop</string>
    <string name="atm_nonstopTitle">Nonstop</string>
    <string name="title_activity_atm">ATMActivity</string>
    <string name="atm_openingWithdrawalHoursTitle">Withdrawal opening hours:</string>
    <string name="atm_openingWithdrawal_mondayTitle">Monday</string>
    <string name="atm_openingWithdrawal_tuesdayTitle">Tuesday</string>
    <string name="atm_openingWithdrawal_wednesdayTitle">Wednesday</string>
    <string name="atm_openingWithdrawal_thursdayTitle">Thursday</string>
    <string name="atm_openingWithdrawal_fridayTitle">Friday</string>
    <string name="atm_openingWithdrawal_saturdayTitle">Saturday</string>
    <string name="atm_openingWithdrawal_sundayTitle">Sunday</string>
    <string name="atm_openingDepositHoursTitle">Deposit opening hours:</string>
    <string name="atm_openingDeposit_mondayTitle">Monday</string>
    <string name="atm_openingDeposit_tuesdayTitle">Tuesday</string>
    <string name="atm_openingDeposit_wednesdayTitle">Wednesday</string>
    <string name="atm_openingDeposit_thursdayTitle">Thursday</string>
    <string name="atm_openingDeposit_fridayTitle">Friday</string>
    <string name="atm_openingDeposit_saturdayTitle">Saturday</string>
    <string name="atm_openingDeposit_sundayTitle">Sunday</string>
    <string name="branch_servicesTitle">Services:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string-array name="empty_array">
    </string-array>

    <string-array name="pref_my_banks_titles">
        <item>Air Bank</item>
        <item>Česká Spořitelna</item>
    </string-array>
    <string-array name="pref_my_banks_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example General settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toolbar_settings_title">Preferences</string>
    <string name="pref_title_my_banks">My Banks</string>
    <string name="pref_header_my_banks">My Banks</string>
    <string name="ph_branchlist_name">Branch Name</string>
    <string name="ph_branchlist_address">Branch Address</string>
    <string name="ph_branchlist_phone">Branch Phone</string>
    <string name="ph_branchList_distance">XX</string>
    <string name="toolbar_position_title">Sort by distance</string>
    <string name="ph_atmsList_distance">XX</string>
    <string name="ph_atmsList_address">ATMs Address</string>
    <string name="ph_atmsList_name">ATMs Name</string>
</resources>
