<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <ImageView
        android:id="@+id/branchList_bank_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_bank_black_24dp"
        android:background="@color/colorAirBankGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/branchList_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/branchList_name"
        android:text="@string/ph_branchlist_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/branchList_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/branchList_bank_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/branchList_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/branchList_address"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/ph_branchlist_address"
        app:layout_constraintBottom_toTopOf="@+id/branchList_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/branchList_bank_logo"
        app:layout_constraintTop_toBottomOf="@+id/branchList_name" />

    <TextView
        android:id="@+id/branchList_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/branchList_phone"
        android:text="@string/ph_branchlist_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/branchList_distance"
        app:layout_constraintStart_toEndOf="@id/branchList_bank_logo"
        app:layout_constraintTop_toBottomOf="@+id/branchList_address" />

    <TextView
        android:id="@+id/branchList_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ph_branchList_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>